# JoyCodeProxy

./: .gitignore  Dockerfile  Dockerfile.python  README.md  go.mod  go.sum  pyproject.toml
cmd/JoyCodeProxy/: chat.go  check.go  config.go  daemon.go  dashboard_test.go  models.go  reset_password.go  root.go  search.go  serve.go  service.go  service_linux.go  version.go  whoami.go
cmd/JoyCodeProxy/static/: index.html
docs/superpowers/plans/: 2026-04-27-claude-code-protocol-optimization.md  2026-04-27-cli-ui-enhancement.md  2026-04-27-credential-validation.md  2026-04-27-go-to-python-rewrite.md  2026-04-28-account-detail-page.md  2026-04-28-encryption-frontend-settings.md  2026-04-28-multi-account-credential-routing.md  (+13 more)
joycode_proxy/: anthropic_handler.py  auth.py  cli.py  client.py  credential_router.py  crypto.py  db.py  openai_handler.py  server.py  ui.py  web_api.py
pkg/anthropic/: anthropic_test.go  handler.go  logger.go  translate.go  translate_extended_test.go  truncate.go  types.go
pkg/auth/: credentials.go  credentials_extended_test.go  credentials_test.go  jdlogin.go  jwt.go  password.go
pkg/dashboard/: handler.go  handler_test.go
pkg/joycode/: client.go  client_test.go  types.go
pkg/openai/: chat.go  handler.go  handler_test.go  search.go  translate.go  translate_test.go  types.go
pkg/store/: store.go  store_test.go  token_usage.go
tests/: test_anthropic.py  test_auth.py  test_credential_router.py  test_db.py  test_multi_account.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
(+75 files in other folders)
