[project]
name = "joycode-proxy"
version = "0.1.0"
description = "JoyCode API proxy - OpenAI & Anthropic compatible"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "click>=8.2",
    "sse-starlette>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
joycode-proxy = "joycode_proxy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
